@@ -71,9 +71,12 @@ void QuartzBitmap_Output(QuartzDesc_t dev, QuartzBitmapDevice *qbd)
     	CGImageRef image = CGBitmapContextCreateImage(qbd->bitmap);
         if(CFStringCompare(scheme,CFSTR("file"), 0) == 0) { /* file output */
             CGImageDestinationRef dest = CGImageDestinationCreateWithURL(path, type, 1, NULL);
-            CGImageDestinationAddImage(dest, image, NULL);
-            CGImageDestinationFinalize(dest);
-            CFRelease(dest);
+	    if(dest) {
+		CGImageDestinationAddImage(dest, image, NULL);
+		CGImageDestinationFinalize(dest);
+		CFRelease(dest);
+	    } else 
+		error(_("QuartzBitmap_Output - unable to open file '%s'"), buf);
         } else if(CFStringCompare(scheme, CFSTR("clipboard"), 0) == 0) { /* clipboard output */
             CFMutableDataRef      data = CFDataCreateMutable(kCFAllocatorDefault, 0);
             CGImageDestinationRef dest = CGImageDestinationCreateWithData(data, type, 1, NULL);
